--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,28 @@
 @import "basscss";
 @import "basscss-colors";
 @import "basscss-background-colors";
+@import "./borders.css";
+@import "./fonts.css";
+@import "./shame.css";
+
+:root {
+    --h1: 70px;
+    --h2: 40px;
+    --black: #222;
+    --lime: #cdebdb;
+}
+
+* {
+    margin: 0px;
+    color: var(--black);
+    font-family: 'Open Sans', sans-serif;
+}
+
+body {
+    background-color: var(--lime);
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0.4em 0px;
+    font-family: 'Oswald', sans-serif;
+}
